[gd_scene load_steps=4 format=3 uid="uid://dodywrqyr2xx3"]

[ext_resource type="Script" path="res://Interaction/Interactionarea/Interactionarea.gd" id="1_kkht2"]
[ext_resource type="Texture2D" uid="uid://63a4ieqa6680" path="res://Assets/Sprites/tree1.png" id="2_y54ut"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1gab2"]
size = Vector2(74, 88)

[node name="InteractionArea" type="Area2D"]
collision_layer = 0
script = ExtResource("1_kkht2")
action_name = "Cut"
type = "Tree"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, -45)
shape = SubResource("RectangleShape2D_1gab2")

[node name="Timer" type="Timer" parent="."]
wait_time = 35.962

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2, -45)
scale = Vector2(0.162, 0.1795)
texture = ExtResource("2_y54ut")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
